welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var Color=new Array[Color](getMondeHauteur())
  for (i<- 1 to getMondeHauteur()) {
    Color[i]=getCouleurSol()
  }
}